--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <!-- MAIN SECTION -->
 
-    <main style="background: url('./src/img/bg-main.png')">
+    <main>
         <div class="loan container">
 
             <!-- SLIDERS -->
 
-            <div class="option-money row col-6 offset-3">
+            <div class="option-money row">
 
             <!-- FIRST SLIDER -->
 
