add section 'company feature'

--- a/index.html
+++ b/index.html
@@ -170,6 +170,123 @@
     </div>
 
 
+    <!-- COMPANY -->
+
+    <section class="company">
+        <div class="container">
+            <!-- HEADER -->
+
+            <div class="company__header">
+                О компании
+            </div>
+
+            <div class="company__features wrap">
+                <div class="wrap__item card-company">
+                    <div class="image">
+                        <img src="./src/img/company/icons/1.png" alt="company">
+                    </div>
+                    <div class="card-company__text">
+                        <span class="card-company__text-check"></span>
+                        <p class="card-company__text-lorem">
+                            Микрофинансовая компания 
+                            TEZ AQSHA предлагает своим 
+                            клиентам быстрое рассмотрение 
+                            заявок и выдачу денег
+                        </p>
+                    </div>
+                </div>
+                <div class="wrap__item card-company">
+                    <div class="image">
+                        <img src="./src/img/company/icons/2.png" alt="company">
+                    </div>
+                    <div class="card-company__text">
+                        <span class="card-company__text-check"></span>
+                        <p class="card-company__text-lorem">Организация работает с такими 
+                            организациями как ПКБ и ГКБ 
+                            и обещает индивидуальный 
+                            подход к каждому клиент, а также 
+                            высокий процент одобрения</p>
+                    </div>
+                </div>
+                <div class="wrap__item card-company">
+                    <div class="image">
+                        <img src="./src/img/company/icons/3.png" alt="company">
+                    </div>
+                    <div class="card-company__text">
+                        <span class="card-company__text-check"></span>
+                        <p class="card-company__text-lorem">
+                            Для получения займа в TEZ 
+                            AQSHA необходимо иметь при 
+                            cебе удостоверение личности 
+                            и прийти в одно из отделений
+                        </p>
+                    </div>
+                </div>
+                <div class="wrap__item card-company">
+                    <div class="image">
+                        <img src="./src/img/company/icons/4.png" alt="company">
+                    </div>
+                    <div class="card-company__text">
+                        <span class="card-company__text-check"></span>
+                        <p class="card-company__text-lorem">
+                            Напоминаем, что вовремя 
+                            выполняя все условия по 
+                            договору клиент возвращает 
+                            только основной долг и 
+                            начисленное вознаграждение
+                        </p>
+                    </div>
+                </div>
+                <div class="wrap__item card-company">
+                    <div class="image">
+                        <img src="./src/img/company/icons/5.png" alt="company">
+                    </div>
+                    <div class="card-company__text">
+                        <span class="card-company__text-check"></span>
+                        <p class="card-company__text-lorem">
+                            При досрочном погашении 
+                            займа клиенту необходимо 
+                            будет уплатить процент за 
+                            полный срок на который был 
+                            оформлен займ
+                        </p>
+                    </div>
+                </div>
+                <div class="wrap__item card-company">
+                    <div class="image">
+                        <img src="./src/img/company/icons/6.png" alt="company">
+                    </div>
+                    <div class="card-company__text">
+                        <span class="card-company__text-check"></span>
+                        <p class="card-company__text-lorem">
+                            При невыполнении обязательств 
+                            к клиенту предъявляются 
+                            штрафные санкции за каждый 
+                            день невыполнения 
+                            обязательств
+                        </p>
+                    </div>
+                </div>
+                <div class="wrap__item wrap__item-long card-company">
+                    <div class="image">
+                        <img src="./src/img/company/icons/7.png" alt="company">
+                    </div>
+                    <div class="card-company__text">
+                        <span class="card-company__text-check"></span>
+                        <p class="card-company__text-lorem">
+                            Более подробные условия клиент всегда 
+                            может уточнить позвонив на горячую линию 
+                            8 800 080 71 71 или же прочитав правила 
+                            предоставления микрокредитов
+                        </p>
+                    </div>
+                </div> 
+            </div>
+            
+        </div>
+    </section>
+
+
 
 </body>
 
