Editing section 'Company Feature'. Add span 'check'. Editing way image

--- a/index.html
+++ b/index.html
@@ -276,8 +276,13 @@
                         <p class="card-company__text-lorem">
                             Более подробные условия клиент всегда 
                             может уточнить позвонив на горячую линию 
-                            8 800 080 71 71 или же прочитав правила 
-                            предоставления микрокредитов
+                            <strong class="card-company__text-lorem card-company__text-red">
+                                8 800 080 71 71
+                            </strong>
+                            или же прочитав 
+                            <a href="#" class="card-company__text-lorem card-company__text-red">
+                                правила предоставления микрокредитов
+                            </a>
                         </p>
                     </div>
                 </div> 
