--- a/index.html
+++ b/index.html
@@ -292,6 +292,58 @@
     </section>
 
 
+    <!-- FOOTER -->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer__item col-4">
+                    <img src="./src/img/logo.png" alt="logo">
+                    <span>@ 2020 TEZ AQSHA</span>
+                </div>
+    
+                <div class="footer__item call col-4">
+                    <img src="./src/img/call.png" alt="call">
+                    <div class="text">
+                        <p class="text__number">
+                            8 800 080 71 71
+                        </p>
+                        <p class="text__lorem">
+                            <strong>call-center / </strong>
+                            звонок бесплатный
+                        </p>
+                    </div>
+                </div>
+    
+                <div class="footer__item footer__item-list col-4">
+                    <ul class="list">
+                        <li class="list__item">
+                            <a href="#">
+                                Правила предоставления микрозаймов
+                            </a>
+                        </li>
+                        <li class="list__item list__item-blue">
+                            <a href="#">
+                                Калькулятор займа
+                            </a>
+                        </li>
+                        <li class="list__item">
+                            <a href="#">
+                                Отзывы клиентов
+                            </a>
+                        </li>
+                        <li class="list__item">
+                            <a href="#">
+                                О компании
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
 
 </body>
 
