--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <span>Мы быстро рассмотрим Вашу заявку и примем решение о предоставлении денежных средств выбранным вами способом</span>
             </div>
             <div class="features__item col-xl-4 col-12">
-                <img src="./src/img/future/2.png" alt="feature2">
+                <img src="./src/img/future/2.png" alt="feature2" class="features__img-small">
                 <span>Клиенты должны помнить, что кредитная история влияет на одобрение</span>
             </div>
             <div class="features__item col-xl-4 col-12">
