Edit PP desktop

--- a/index.html
+++ b/index.html
@@ -266,7 +266,10 @@
                             Для получения займа в TEZ 
                             AQSHA необходимо иметь при 
                             cебе удостоверение личности 
-                            и прийти в одно из отделений
+                            и прийти в одно из
+                            <span class="card-company__text-red">
+                                отделений
+                            </span>
                         </p>
                     </div>
                 </div>
