--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </div>
 
             <div class="company__features wrap">
-                <div class="wrap__item card-company col-6">
+                <div class="wrap__item card-company col-sm-6 col-md-12 col-lg-6 col-12">
                     <div class="image">
                         <img src="./src/img/company/icons/1.png" alt="company">
                     </div>
@@ -243,7 +243,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="wrap__item card-company col-6">
+                <div class="wrap__item card-company col-sm-6 col-md-12 col-lg-6 col-12">
                     <div class="image">
                         <img src="./src/img/company/icons/2.png" alt="company">
                     </div>
@@ -256,7 +256,7 @@
                             высокий процент одобрения</p>
                     </div>
                 </div>
-                <div class="wrap__item card-company col-6">
+                <div class="wrap__item card-company col-sm-6 col-md-12 col-lg-6 col-12">
                     <div class="image">
                         <img src="./src/img/company/icons/3.png" alt="company">
                     </div>
@@ -273,7 +273,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="wrap__item card-company col-6">
+                <div class="wrap__item card-company col-sm-6 col-md-12 col-lg-6 col-12">
                     <div class="image">
                         <img src="./src/img/company/icons/4.png" alt="company">
                     </div>
@@ -288,7 +288,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="wrap__item card-company col-6">
+                <div class="wrap__item card-company col-sm-6 col-md-12 col-lg-6 col-12">
                     <div class="image">
                         <img src="./src/img/company/icons/5.png" alt="company">
                     </div>
@@ -303,7 +303,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="wrap__item card-company col-6">
+                <div class="wrap__item card-company col-sm-6 col-md-12 col-lg-6 col-12">
                     <div class="image">
                         <img src="./src/img/company/icons/6.png" alt="company">
                     </div>
