Edit media 480px. Edit PP for extra-small

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <!-- CALCULATIONS -->
 
-            <div class="loan__item calculations row col-xl-10 offset-xl-1 col-10 offset-1">
+            <div class="loan__item calculations row col-xl-10 offset-xl-1 col-12">
                 <p class="calculations__text">Возвращаете: <strong>125 000 тнг.</strong> </p>
                 <p class="calculations__text calculations__text-data">Дата возврата: <strong>26 сентября 2020, среда</strong></p>
                 <button class="calculations__button-take-money">Получить деньги</button>
